--- a/exposure_outcome_updated.Rmd
+++ b/exposure_outcome_updated.Rmd
@@ -317,60 +317,104 @@ plot(path_comfortable_plot)
 
 ```{r}
 victoria_merged_filter <- read_csv("victoria_merged_filter.csv")
+
 at_infrastructure <- victoria_merged_filter %>% dplyr::select(path_comf, residential_street_comf, res_street_traffic_calming_comf, major_street_no_bike_lane, major_street_bike_lane, major_street_separated_bike_lane)
-
-tabyl(at_infrastructure$major_street_no_bike_lane)
-at_infrastructure$path_comf <- factor(at_infrastructure$path_comf, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
-
-at_infrastructure$residential_street_comf <- factor(at_infrastructure$residential_street_comf, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
-
-at_infrastructure$res_street_traffic_calming_comf <- factor(at_infrastructure$res_street_traffic_calming_comf, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
-
-at_infrastructure$major_street_no_bike_lane <- factor(at_infrastructure$major_street_no_bike_lane, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
-
-at_infrastructure$major_street_bike_lane <- factor(at_infrastructure$major_street_bike_lane, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
-
-at_infrastructure$major_street_separated_bike_lane <- factor(at_infrastructure$major_street_separated_bike_lane, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
 ```
 
+## Separated Path
 ```{r}
 typeof(at_infrastructure$path_comf)  
 at_infrastructure$path_comf <- as.character(at_infrastructure$path_comf)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "path_comf"] <- "1_separated_path"
 
-x$name <- factor(x$name, levels = x$name[order(x$val)])
-
-at_infrastructure$`1_separated_path` <- factor(at_infrastructure$`1_separated_path`, levels =
-c("Very uncomfortable", "Somewhat comfortable"))
-
-at_infrastructure$`1_separated_path` <- factor(at_infrastructure$`1_separated_path`, c("I don't know/Prefer not to answer", "Very uncomfortable", "Somewhat uncomfortable", "Very comfortable"))
-
 at_infrastructure$`1_separated_path` <- as.character(at_infrastructure$`1_separated_path`)
 
 ggplot(at_infrastructure) +
   geom_bar(aes(x = `1_separated_path`))
 
+at_infrastructure <- at_infrastructure %>% mutate(`1_separated_path` = case_when(
+  `1_separated_path` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `1_separated_path` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+  `1_separated_path` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+  `1_separated_path` == "Very comfortable" ~ "4_very_comfortable"
+)) 
+```
+
+## Residential street
+```{r}
 at_infrastructure$residential_street_comf <- as.character(at_infrastructure$residential_street_comf)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "residential_street_comf"] <- "2_residential_street"
 
+at_infrastructure <- at_infrastructure %>% mutate(`2_residential_street` = case_when(
+  `2_residential_street` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `2_residential_street` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+  `2_residential_street` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+  `2_residential_street` == "Very comfortable" ~ "4_very_comfortable"
+)) 
+```
+
+## Residential Street Traffic calming
+```{r}
 at_infrastructure$res_street_traffic_calming_comf <- as.character(at_infrastructure$res_street_traffic_calming_comf)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "res_street_traffic_calming_comf"] <- "3_residential_street_traffic_calming"
 
+at_infrastructure <- at_infrastructure %>% mutate(`3_residential_street_traffic_calming` = case_when(
+  `3_residential_street_traffic_calming` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `3_residential_street_traffic_calming` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+  `3_residential_street_traffic_calming` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+  `3_residential_street_traffic_calming` == "Very comfortable" ~ "4_very_comfortable",
+   `3_residential_street_traffic_calming` == "I don't know/Prefer not to answer" ~ "5_Unsure/Prefer_not_to_answer"
+)) 
+```
+
+## Major street no bike lane 
+```{r}
 at_infrastructure$major_street_no_bike_lane <- as.character(at_infrastructure$major_street_no_bike_lane)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "major_street_no_bike_lane"] <- "4_major_street_no_bike_lane"
 
+at_infrastructure <- at_infrastructure %>% mutate(`4_major_street_no_bike_lane` = case_when(
+ `4_major_street_no_bike_lane` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `4_major_street_no_bike_lane` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+  `4_major_street_no_bike_lane` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+  `4_major_street_no_bike_lane` == "Very comfortable" ~ "4_very_comfortable"
+)) 
+```
+
+## Major street bike lane
+```{r}
 at_infrastructure$major_street_bike_lane <- as.character(at_infrastructure$major_street_bike_lane)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "major_street_bike_lane"] <- "5_major_street_bike_lane"
 
+at_infrastructure <- at_infrastructure %>% mutate(`5_major_street_bike_lane` = case_when(
+ `5_major_street_bike_lane` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `5_major_street_bike_lane` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+  `5_major_street_bike_lane` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+  `5_major_street_bike_lane` == "Very comfortable" ~ "4_very_comfortable"
+)) 
+```
+
+## Major street separated bike lane
+```{r}
 at_infrastructure$major_street_separated_bike_lane <- as.character(at_infrastructure$major_street_separated_bike_lane)
 
 colnames(at_infrastructure)[colnames(at_infrastructure) == "major_street_separated_bike_lane"] <- "6_major_street_separated_bike_lane"
 
+at_infrastructure <- at_infrastructure %>% mutate(`6_major_street_separated_bike_lane` = case_when(
+ `6_major_street_separated_bike_lane` == "Very uncomfortable" ~ "1_very_uncomfortable",
+  `6_major_street_separated_bike_lane` == "Somewhat uncomfortable" ~ "2_somewhat_uncomfortable",
+ `6_major_street_separated_bike_lane` == "Somewhat comfortable" ~ "3_somewhat_comfortable", 
+ `6_major_street_separated_bike_lane` == "Very comfortable" ~ "4_very_comfortable",
+   `6_major_street_separated_bike_lane` == "I don't know/Prefer not to answer" ~ "5_Unsure/Prefer_not_to_answer"
+)) 
+```
+
+## Graph with all 6 AT Types
+```{r}
 at_infrastructure %>%
   keep(is.character) %>% 
   gather() %>% 
@@ -382,31 +426,3 @@ at_infrastructure %>%
           y = "Number of Participants (n)") 
 ```
 
-```{r}
-victoria_merged_filter <- read_csv("victoria_merged_filter.csv")
-
-at_infrastructure_1 <- victoria_merged_filter %>% dplyr::select(bike_comf_a, bike_comf_b, bike_comf_c, bike_comf_d, bike_comf_e, bike_comf_f, gender)
-at_infrastructure_2 <- at_infrastructure_1 %>% filter(bike_comf_c <= 4) %>% filter(bike_comf_f <= 4)
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_a"] <- "separated_path"
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_b"] <- "residential_street"
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_c"] <- "residential_street_traffic_calming"
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_d"] <- "major_street_no_bike_lane"
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_e"] <- "major_street_bike_lane"
-
-colnames(at_infrastructure_2)[colnames(at_infrastructure_2) == "bike_comf_f"] <- "major_street_separated_bike_lane"
-
-at_infrastructure_2 %>%
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-    facet_wrap(~ key, scales = "free") +
-    geom_bar() +
-      labs(title = "Preference for Different Types of Active Transportation Infrastructure", 
-          x = "Level of Preference", 
-          y = "Number of Participants (n)") 
-```
